# warikan

./: .gitignore  LICENSE  Taskfile.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: client.yml  server.yml
client/: .env.sample  codegen.ts  package.json  tailwind.config.ts  vercel.json  vite.config.ts
client/app/: entry.server.tsx  root.tsx
client/app/components/: AmountInput.tsx  AppBar.tsx  Container.tsx  CreateGroupModal.tsx  UnimplementedModal.tsx
client/app/gql/: gql.ts  graphql.ts
client/app/lib/: form.ts  query.ts
client/app/routes/: _index.tsx  auth.callback.tsx  auth.signin.tsx  auth.signout.tsx  (+6 more)
server/: .env.sample  Cargo.toml
server/src/: app.rs  lib.rs  main.rs
server/src/controllers/: group.rs  mod.rs  notification.rs  payment.rs  user.rs
server/src/entities/: auth.rs  group.rs  mod.rs  notification.rs  payment.rs  user.rs  warikan.rs
server/src/repositories/: mod.rs
server/src/repositories/firestore/: group.rs  mod.rs  notification.rs  payment.rs  user.rs
server/src/repositories/mongo/: group.rs  mod.rs  notification.rs  payment.rs  user.rs
server/src/usecases/: group.rs  mod.rs  notification.rs  payment.rs  user.rs
server/src/usecases/group/: create.rs  delete.rs  mod.rs  read.rs  update.rs
server/src/usecases/notification/: create.rs  delete.rs  mod.rs  read.rs
server/src/usecases/payment/: create.rs  delete.rs  read.rs  update.rs
server/src/usecases/user/: create.rs  delete.rs  read.rs  update.rs
server/tests/: scenario_simple.rs
(+3 files in other folders)
